--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Push github</title>
 </head>
 <body>
@@ -11,5 +12,6 @@
     <h2>I can resend code github</h2>
     <h3>I can changed my code on github</h3>
     <p>this is my paragraph for push again</p>
+    <p>I am coding and coding</p>
 </body>
 </html>
